refactor up to a stable state
