# src/main/kotlin/com/iulia/gardener/controller/GreenhouseController.kt
@@ -2,14 +2,14 @@ package com.iulia.gardener.controller
 
 import org.openapitools.gardener.api.GreenhouseApi
 import org.openapitools.gardener.model.GreenhouseConfigDto
-import org.openapitools.gardener.model.GreenhouseStatsDto
+import org.openapitools.gardener.model.GreenhouseMessageDto
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Controller
 
 @Controller
 class GreenhouseController: GreenhouseApi {
 
-    override fun postStats(greenhouseStatsDto: GreenhouseStatsDto): ResponseEntity<GreenhouseConfigDto> {
-        return super.postStats(greenhouseStatsDto)
+    override fun postStats(greenhouseMessageDto: GreenhouseMessageDto): ResponseEntity<GreenhouseConfigDto> {
+        return super.postStats(greenhouseMessageDto)
     }
 }
